    (Masatake Iwasaki via aajisaka)

    HADOOP-12258. Need translate java.nio.file.NoSuchFileException to
    FileNotFoundException to avoid regression. (Zhihai Xu via cnauroth)

    HADOOP-12689. S3 filesystem operations stopped working correctly
    (Matt Paduano via raviprak)

    HADOOP-12636. Prevent ServiceLoader failure init for unused FileSystems.
    (Inigo Goiri via cdouglas)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

    HADOOP-12189. Improve CallQueueManager#swapQueue to make queue elements
    drop nearly impossible. (Zhihai Xu via wang)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-11932. MetricsSinkAdapter may hang  when being stopped.
    (Brahma Reddy Battula via jianhe)

    HADOOP-12213. Interrupted exception can occur when Client#stop is called.
    (Kuhu Shukla via ozawa)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HADOOP-12464. Interrupted client may try to fail-over and retry (kihwal)

    HADOOP-12359. hadoop fs -getmerge doc is wrong.
    (Jagadesh Kiran N via aajisaka)

    HADOOP-12230. hadoop-project declares duplicate, conflicting curator
    dependencies. (Rakesh R via aajisaka)

    HADOOP-12465. Incorrect javadoc in WritableUtils.java.
    (Jagadesh Kiran N via aajisaka)

    HADOOP-11864. JWTRedirectAuthenticationHandler breaks java8 javadocs.
    (Larry McCay via stevel)

    HADOOP-12076. Incomplete Cache Mechanism in CredentialProvider API.
    (Larry McCay via cnauroth)

Release 2.7.1 - 2015-07-06 
||||||| parent of 6c4aa89... HADOOP-11581. Multithreaded correctness Warnings #org.apache.hadoop.fs.shell.Ls (Brahma Reddy Battula via aw)